---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Compatibility with all variant of integers\n    var i : int\n    var n : nat\n    var _ii := i or i\n    var _in := i or n\n    var _ni := n or i\n    var _nn := n or n\n"
---
"i"@"src/main.t:58..59" [ConstVar(Var, No)]: int
"n"@"src/main.t:74..75" [ConstVar(Var, No)]: nat
"_ii"@"src/main.t:90..93" [ConstVar(Var, No)]: nat
"_in"@"src/main.t:112..115" [ConstVar(Var, No)]: nat
"_ni"@"src/main.t:134..137" [ConstVar(Var, No)]: nat
"_nn"@"src/main.t:156..159" [ConstVar(Var, No)]: nat
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
